src/objects/Competitor_Services__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Services (Account)</relationshipLabel>
        <relationshipName>Competitor_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archiving_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archiving Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archiving_Reason__c</fullName>
        <label>Archiving Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Archiving_Flag__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset no longer in use</fullName>
                </value>
                <value>
                    <fullName>Invalid Service</fullName>
                </value>
                <value>
                    <fullName>Customer inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_ID__c</fullName>
        <externalId>true</externalId>
        <label>Conversion ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_6864</fullName>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>SAP_0976</fullName>
                    <label>Sweden</label>
                </value>
                <value>
                    <fullName>SAP_0975</fullName>
                    <label>Denmark</label>
                </value>
                <value>
                    <fullName>SAP_0333</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>SAP_6706</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>SAP_0080</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>SAP_0111</fullName>
                    <label>Netherlands</label>
                </value>
                <value>
                    <fullName>SAP_6709</fullName>
                    <label>Ireland</label>
                </value>
                <value>
                    <fullName>SAP_6712</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>SAP_6750</fullName>
                    <label>Great Britain</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF(Data_Quality_Score__c == 100, &apos;All Competitor Services Captured&apos;, &apos;Missing: &apos; &amp;BR() 
&amp;IF (ISBLANK(Product__c),&apos;Product &apos; &amp;BR(),&apos;&apos;) 
&amp;IF (ISBLANK(Supplier__c), &apos;Supplier &apos; &amp;BR() , &apos;&apos;) 
&amp;IF (ISBLANK(TEXT(Supplier_Type__c)),&apos;Supplier Type&apos; &amp;BR() ,&apos;&apos;) 
&amp;IF (ISBLANK(Expiration_date_Contract__c), &apos;Expiration Date Contract&apos; &amp;BR() , &apos;&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(NOT(ISBLANK (Product__c)), 25, 0) + IF(NOT(ISBLANK (TEXT(Supplier_Type__c))), 25, 0) + IF(NOT(ISBLANK (Supplier__c)), 25, 0) + IF(NOT(ISBLANK (Expiration_date_Contract__c)), 25, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_date_Contract__c</fullName>
        <label>Expiration date Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Optional_Years__c</fullName>
        <label>Optional Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Service Coverage</fullName>
                </value>
                <value>
                    <fullName>Partial Service Coverage</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance </fullName>
                </value>
                <value>
                    <fullName>Evening Weekend Hours</fullName>
                </value>
                <value>
                    <fullName>4 Hour Response</fullName>
                </value>
                <value>
                    <fullName>Service Contract N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Type__c</fullName>
        <label>Supplier Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Independent Service Provider</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Services (Supplier)</relationshipLabel>
        <relationshipName>Competitor_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Competitor Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS{0000000000}</displayFormat>
        <label>Competitor Services ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Archiving_Reason_Required</fullName>
        <active>true</active>
        <description>Archiving reason is required when competitor service is archived</description>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.Competitor_Service__c, Archiving_Flag__c = true, ISPICKVAL(Archiving_Reason__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Archiving_Reason__c</errorDisplayField>
        <errorMessage>Please set an Archiving Reason</errorMessage>
    </validationRules>
</CustomObject>